--- a/inner.html
+++ b/inner.html
@@ -174,7 +174,7 @@
 
         <div class="footer-copyright">
           <p>Website by</p>
-          <a class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy">
+          <img class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy">
         </div>
 
       </footer>
@@ -182,4 +182,4 @@
       </div>
       <!--container end-->
       </body>
-      </html>
+    </html>
