--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
           <div class="popup-form">
           <form action="https://echo.htmlacademy.ru" method="post">
             <label for="date-in">Дата заезда:</label>
-            <input type="date" id="date-in" value="24 апреля 2016">
+            <input type="date" id="date-in" value="2016-24-04">
             <label for="date-out">Дата выезда:</label>
-            <input type="date" id="date-out" value="4 июля 2016">
+            <input type="date" id="date-out" value="2016-04-07">
             <label for="adults">Взрослые:</label>
             <input type="number" id="adults" min="1" max="100" step="1" value="2">
             <label for="children">Дети:</label>
@@ -117,6 +117,7 @@
         </div>
         </section>
         <section class="map">
+          <h2 class="hidden">карта Седоны</h2>
           <img src="http://placehold.it/150x100" alt="Карта Седоны">
         </section>
 
@@ -138,7 +139,7 @@
 
         <div class="footer-copyright">
           <p>Website by</p>
-          <a class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy">
+          <img class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy">
         </div>
 
       </footer>
