--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <!--header-->
       <header class="main-header">
         <nav class="main-navigation">
+          <a class="main-header-logo" href="#"><img src="http://placehold.it/150x100" width="150px" height="100px" alt="Город Седона, штат Аризона, США"></a>
           <ul class="site-navigation">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Фото и видео</a></li>
-            <li><a class="main-header-logo" href="#"><img src="http://placehold.it/150x100" width="150px" height="100px" alt="Город Седона, штат Аризона, США"></a></li>
             <li><a href="#">Карта штата</a></li>
             <li><a href="#">Гостиницы</a></li>
           </ul>
@@ -21,17 +21,15 @@
       <!--header end-->
       <!--content-->
       <main class="main-content">
-
         <h1 class="hidden">Седона, штат Аризона, США</h1>
-        <h2 class="hidden">Особенности города</h2>
 
-        <div class="vitrina">
-          <div class="vitrina-text"></div>
-          <div class="vitrina-photo"></div>
+        <div class="banner">
+          <div class="banner-text"></div>
+          <div class="banner-photo"></div>
         </div>
 
         <section class="features">
-
+          <h2 class="hidden">Особенности города</h2>
           <div class="features-header">
             <p class="features-header-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
             <p class="features-header-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
@@ -112,12 +110,12 @@
             <input type="number" id="adults" min="1" max="100" step="1" value="2">
             <label for="children">Дети:</label>
             <input type="number" id="children" min="0" max="100" step="1" value="0">
-            <a href="#" class="popup-search-btn">Найти</a>
+            <button type="submit" class="popup-search-btn">Найти</button>
           </form>
         </div>
         </section>
         <section class="map">
-          <h2 class="hidden">карта Седоны</h2>
+          <h2 class="hidden">Карта Седоны</h2>
           <img src="http://placehold.it/150x100" alt="Карта Седоны">
         </section>
 
@@ -131,15 +129,15 @@
 
         <div class="main-footer-social">
           <ul class="main-footer-list">
-            <li class="social-button tw">Twitter</li>
-            <li class="social-button fb">Facebook</li>
-            <li class="social-button youtube">Youtube</li>
+            <li class="social-button tw"><a href="#">Twitter</a></li>
+            <li class="social-button fb"><a href="#">Facebook</a></li>
+            <li class="social-button youtube"><a href="#">Youtube</a></li>
           </ul>
         </div>
 
         <div class="footer-copyright">
           <p>Website by</p>
-          <img class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy">
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy"></a>
         </div>
 
       </footer>
