Поправила ссылку для лого на главной

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <!--header-->
       <header class="main-header">
         <nav class="main-navigation">
-          <a class="main-header-logo" href="#"><img src="http://placehold.it/150x100" width="150px" height="100px" alt="Город Седона, штат Аризона, США"></a>
+          <a class="main-header-logo"><img src="http://placehold.it/150x100" width="150px" height="100px" alt="Город Седона, штат Аризона, США"></a>
           <ul class="site-navigation">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Фото и видео</a></li>
