--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <!--header-->
       <header class="main-header">
         <nav class="main-navigation">
-          <a class="main-header-logo"><img src="http://placehold.it/150x100" width="150px" height="100px" alt="Город Седона, штат Аризона, США"></a>
+          <a class="main-header-logo"><img src="img/logo.png" width="138px" height="70px" alt="Город Седона, штат Аризона, США"></a>
           <ul class="site-navigation">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Фото и видео</a></li>
@@ -21,7 +22,7 @@
       <!--header end-->
       <!--content-->
       <main class="main-content">
-        <h1 class="hidden">Седона, штат Аризона, США</h1>
+        <h1 class="visually-hidden">Седона, штат Аризона, США</h1>
 
         <div class="banner">
           <div class="banner-text"></div>
@@ -29,20 +30,20 @@
         </div>
 
         <section class="features">
-          <h2 class="hidden">Особенности города</h2>
+          <h2 class="visually-hidden">Особенности города</h2>
           <div class="features-header">
-            <p class="features-header-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+            <p class="features-header-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
             <p class="features-header-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           </div>
 
           <div class="features-row1">
             <div class="features-content">
               <p class="features-content-title">Настоящий городок</p>
-              <p class="number">№1</p>
+              <p class="number white">№1</p>
               <p class="features-content-text">Седона — не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <div class="features-image">
-              <img src="http://placehold.it/150x100" width="150px" height="100px" alt="Настоящий городок Седона">
+              <img src="img/town-view.jpg" width="800px" height="401px" alt="Настоящий городок Седона">
             </div>
           </div>
 
@@ -65,11 +66,11 @@
 
           <div class="features-row1">
             <div class="features-image">
-              <img src="http://placehold.it/150x100" width="150px" height="100px" alt="Настоящий городок Седона">
+              <img src="img/devil-bridge.jpg" width="800px" height="256px" alt="Настоящий городок Седона">
             </div>
             <div class="features-content">
-              <p class="features-content-title">Там есть мост дьявола</p>
-              <p class="number">№2</p>
+              <p class="features-content-title">Там есть<br> мост дьявола</p>
+              <p class="number white">№2</p>
               <p class="features-content-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
           </div>
@@ -98,7 +99,7 @@
 
         <section class="popup-search">
           <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="popup-search-text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button class="button-popup-search">Поиск гостиницы в Седоне</button>
           <div class="popup-form">
           <form action="https://echo.htmlacademy.ru" method="post">
@@ -115,8 +116,8 @@
         </div>
         </section>
         <section class="map">
-          <h2 class="hidden">Карта Седоны</h2>
-          <img src="http://placehold.it/150x100" alt="Карта Седоны">
+          <h2 class="visually-hidden">Карта Седоны</h2>
+          <img src="img/map.jpg" alt="Карта Седоны" width="1718px" height="748px">
         </section>
 
 
@@ -136,8 +137,8 @@
         </div>
 
         <div class="footer-copyright">
-          <p>Website by</p>
-          <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="http://placehold.it/150x100" width="150" height="100px" alt="HTML Academy"></a>
+          <p class="footer-copyright-text">Website by</p>
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="img/logo-htmlacademy.png" width="115" height="41px" alt="HTML Academy"></a>
         </div>
 
       </footer>
