--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <h1 class="visually-hidden">Седона, штат Аризона, США</h1>
 
         <div class="banner">
-          <div class="banner-text"></div>
-          <div class="banner-photo"></div>
+          <div class="banner"></div>          
         </div>
 
         <section class="features">
@@ -117,7 +116,7 @@
         </section>
         <section class="map">
           <h2 class="visually-hidden">Карта Седоны</h2>
-          <img src="img/map.jpg" alt="Карта Седоны" width="1718px" height="748px">
+          <img src="img/map.png" alt="Карта Седоны" width="1200px" height="594px">
         </section>
 
 
