--- a/catalog.html
+++ b/catalog.html
@@ -11,12 +11,14 @@
       <!--header-->
       <header class="main-header">
         <nav class="main-navigation">
-          <a class="main-header-logo" href="#"><img src="img/logo.png" width="138px" height="70px" alt="Город Седона, штат Аризона, США"></a>
           <ul class="site-navigation">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Фото и видео</a></li>
+          </ul>
+          <a class="main-header-logo"><img src="img/logo.png" width="138px" height="70px" alt="Город Седона, штат Аризона, США"></a>
+          <ul class="site-navigation">
             <li><a href="#">Карта штата</a></li>
-            <li class="site-navigation-active"><a href="#">Гостиницы</a></li>
+            <li><a href="#">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
@@ -27,7 +29,7 @@
 
         <section class="filter-hotels">
           <h2 class="visually-hidden">Форма поиска отелей</h2>
-          <form action="https://echo.htmlacademy.ru" method="post">
+          <form class="filter-hotels-form" action="https://echo.htmlacademy.ru" method="post">
               <fieldset>
                 <legend>Инфрастуктура:</legend>
                 <input type="checkbox" name="pool" id="check1" checked>
@@ -65,8 +67,9 @@
             <li><a href="#">По типу</a></li>
             <li><a href="#">По рейтингу</a></li>
           </ul>
-          <a href="#" class="triangle triangle-up"></a>
-          <a href="#" class="triangle triangle-down"></a>
+          <div class="triangle-wrapper">
+            <a href="#" class="triangle triangle-up"></a><a href="#" class="triangle triangle-down"></a>
+          </div>
         </section>
 
         <section class="form-result">
