--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,8 @@
             <li><a href="#">По рейтингу</a></li>
           </ul>
           <div class="triangle-wrapper">
-            <a href="#" class="triangle triangle-up"></a><a href="#" class="triangle triangle-down"></a>
+            <a href="#" class="triangle triangle-up"></a>
+            <a href="#" class="triangle triangle-down"></a>
           </div>
         </section>
 
