--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <!--header-->
       <header class="main-header">
         <nav class="main-navigation">
-          <ul class="site-navigation">
+          <ul class="site-navigation site-navigation-left">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Фото и видео</a></li>
           </ul>
           <a class="main-header-logo"><img src="img/logo.png" width="138px" height="70px" alt="Город Седона, штат Аризона, США"></a>
-          <ul class="site-navigation">
+          <ul class="site-navigation site-navigation-right">
             <li><a href="#">Карта штата</a></li>
             <li><a href="#">Гостиницы</a></li>
           </ul>
@@ -41,7 +41,7 @@
           <div class="features-row1">
             <div class="features-content">
               <p class="features-content-title">Настоящий городок</p>
-              <p class="number white">№1</p>
+              <p class="number white">— №1 —</p>
               <p class="features-content-text">Седона — не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <div class="features-image">
@@ -72,7 +72,7 @@
             </div>
             <div class="features-content">
               <p class="features-content-title">Там есть<br> мост дьявола</p>
-              <p class="number white">№2</p>
+              <p class="number white">— №2 —</p>
               <p class="features-content-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
           </div>
@@ -82,17 +82,17 @@
               <li class="features-item">
                 <h3>Небольшая площадь</h3>
                 <p class="number">№3</p>
-                <p>Все достопримеча-тельности находятся очень близко</p>
+                <p class="features-item-dop">Все достопримечательности находятся очень близко</p>
               </li>
               <li class="features-item">
                 <h3>Красивая дорога</h3>
                 <p class="number">№4</p>
-                <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <p class="features-item-dop">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
               <li class="features-item">
                 <h3>Мало туристов</h3>
                 <p class="number">№5</p>
-                <p>Большинство едет в Гранд Каньон и толпится там</p>
+                <p class="features-item-dop">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
             </ul>
           </div>
@@ -107,26 +107,34 @@
           </div>
           <div class="popup-form">
           <form action="https://echo.htmlacademy.ru" method="post">
-            <p>
+            <p class="popup-form-checkin">
               <label for="date-in">Дата заезда:</label>
               <input class="popup-form-input" type="date" id="date-in" placeholder="24 апреля 2017">
-              <button type="button" class="popup-form-calendar"><img src="img/calendar.svg"></button>
+              <button type="button" class="popup-form-calendar">
+                <svg class="icon-calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+              </button>
             </p>
-            <p>
+            <p class="popup-form-checkout">
               <label for="date-out">Дата выезда:</label>
               <input class="popup-form-input" type="date" id="date-out" placeholder="4 июля 2017">
-              <button type="button" class="popup-form-calendar"><img src="img/calendar.svg"></button>
+              <button type="button" class="popup-form-calendar">
+                <svg class="icon-calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+              </button>
             </p>
-            <p>
-              <label for="adults">Взрослые:</label>
-              <button class="popup-form-input popup-form-plus" type="button">Увеличить</button>
-              <input class="popup-form-input" type="number" id="adults" min="1" max="100" step="1" value="2">
-              <button class="popup-form-input popup-form-minus" type="button">Уменьшить</button>
-              <label for="children">Дети:</label>
-              <button class="popup-form-input popup-form-plus" type="button">Увеличить</button>
-              <input class="popup-form-input" type="number" id="children" min="0" max="100" step="1" value="0">
-              <button class="popup-form-input popup-form-minus" type="button">Уменьшить</button>
-            </p>
+            <div class="popup-form-quantity">
+              <p class="popup-form-quantity-adults">
+                <label for="adults">Взрослые:</label>
+                <button class="popup-form-input popup-form-minus" type="button">Уменьшить</button>
+                <input class="popup-form-input" type="number" id="adults" min="1" max="100" step="1" value="2">
+                <button class="popup-form-input popup-form-plus" type="button">Увеличить</button>
+              </p>
+              <p class="popup-form-quantity-children">
+                <label for="children">Дети:</label>
+                <button class="popup-form-input popup-form-minus" type="button">Уменьшить</button>
+                <input class="popup-form-input" type="number" id="children" min="0" max="100" step="1" value="0">
+                <button class="popup-form-input popup-form-plus" type="button">Увеличить</button>
+              </p>
+          </div>
             <button type="submit" class="popup-search-btn">Найти</button>
           </form>
         </div>
